<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.ljnelson</groupId>
  <artifactId>nb-bug-1</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <name>NetBeans Bug 1</name>
  <description>A single-Maven-module project demonstrating problems with --enable-preview.</description>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <properties>
    <maven.compiler.release>14</maven.compiler.release>
  </properties>
  
</project>
